feat:airbnb-done

--- a/Airbnb/index.html
+++ b/Airbnb/index.html
@@ -7,14 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airbnb</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+
+    <div class="price-info">
+        <h2>Show total prices up front <span> Learn more </span></h2>
+    </div>
     <div class="placeHold">
-        <div class="price-info">
-            <h2>Show total prices up front <span> Learn more </span></h2>
-        </div>
         <!-- main navbar -->
         <nav>
             <div class="nav-border">
@@ -326,16 +329,18 @@
         <div class="rowColmn-img">
             <div class="section-imgAndtext">
                 <div class="img-section">
+                    <!-- <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a> -->
                     <img src="/img/img1.webp" alt="" width="100%">
+                    <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
                 </div>
-             
+
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
-                    <i class="fa fa-circle"></i>
-                    <i class="fa fa-circle"></i>
-                    <i class="fa fa-circle"></i>
-                    <i class="fa fa-circle"></i>
-                    <i class="fa fa-circle"></i>
-        
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+
                 <div class="img-text">
                     <h4>IN, India</h4>
                     <span class="navigation">13 km to Sagarmatha National Park</span>
@@ -348,6 +353,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img2.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -360,6 +370,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img3.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -372,6 +387,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img4.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -384,6 +404,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img5.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -396,6 +421,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img6.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -408,6 +438,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img7.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -420,6 +455,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img8.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -432,6 +472,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img9.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -444,6 +489,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img10.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -456,6 +506,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img11.jpg" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -468,6 +523,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img12.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -480,6 +540,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img13.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -492,6 +557,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img14.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -504,6 +574,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img15.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -516,6 +591,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img16.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -528,6 +608,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img17.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -540,6 +625,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img20.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
 
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
@@ -553,6 +643,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img19.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -565,6 +660,11 @@
             <div class="section-imgAndtext">
                 <div class="img-section">
                     <img src="/img/img18.webp" alt="" width="100%">
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
+                    <i class="fa fa-circle"></i>
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -574,13 +674,13 @@
                     <span>₹9,927 <span>night</span></span>
                 </div>
             </div>
-            <div class="under-line"></div>
-            <div class="last-head">
-                Continue exploring tropical homes
-            </div>
-            <div class="last-btn">
-                <button>Show more</button>
-            </div>
+        </div>
+        <div class="under-line"></div>
+        <div class="last-head">
+            Continue exploring tropical homes
+        </div>
+        <div class="last-btn">
+            <button>Show more</button>
         </div>
 
         <!--  -->
@@ -709,8 +809,8 @@
                             <li><a href="#">Letter from our founders</a></li>
                             <li><a href="#">Careers</a></li>
                             <li><a href="#">Investors</a></li>
-                        </ul>  
-                    </div> 
+                        </ul>
+                    </div>
                 </div>
                 <div class="copyrighit">
                     <div class="cp-section">
@@ -745,6 +845,16 @@
                 </span>
             </button>
         </div>
+        <div class="map-two">
+            <button>
+                <span>
+                    <span>Show map</span>
+                    <div class="map-img">
+                        <img src="/img/svgexport-12.svg" alt="" width="16px">
+                    </div>
+                </span>
+            </button>
+        </div>
         <nav class="footer-nav">
             <div class="nav-flex">
                 <a href="#">
@@ -767,7 +877,40 @@
                 </a>
             </div>
         </nav>
+        <div class="second-nav">
+            <div class="nav-bar">
+                <div class="policy">
+                    <div class="footerText-end">
+                        <ul>
+                            <li><a href="#">© 2023 Airbnb, Inc.</a></li>
+                            <li><span>·</span><a href="#">Privacy</a></li>
+                            <li><span>·</span><a href="#">Terms</a></li>
+                            <li><span>·</span><a href="#">Sitemap</a></li>
+                            <li><span>·</span><a href="#">Company details</a></li>
+                            <li><span>·</span><a href="#">Destinations</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="location-support">
+                    <div class="location">
+                        <div class="world-flex">
+                            <span><img src="/img/svgexport-11.svg" alt=""></span>
+                            <span>English (IN)</span>
+                        </div>
+                        <div class="currency">
+                            <span>₹</span>
+                            <span>INR</span>
+                        </div>
+                        <span>Support&resources</span>
+                        <span><i class="fa-solid fa-angle-up"></i></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
     </footer>
+
 </body>
 
 </html>
