feat-headAndMain-progressing

--- a/Doordash/index1.html
+++ b/Doordash/index1.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <main>
-        <div>
+    <header>
+        <div class="header">
           
          <div class="head-section">
             <div class="sign-bars">
@@ -45,7 +45,8 @@
                           </div> 
                           <div class="enter-icon">
                             <button>
-                                <img src="/Doordash/Assets/img/arw-blck.svg" alt="">
+                                <img class="black-icon" src="/Doordash/Assets/img/arw-blck.svg" alt="">
+                                <img class="white-icon" src="/Doordash/Assets/img/white-searc-icon.svg" alt="">
                             </button>
                           </div>
                         </div>
@@ -58,8 +59,65 @@
                 </div>
             </div>
         </div>  
-        <div class="secion-background"></div>
-        
+        <!--div img gap -->
+        <div class="secion-background"></div> 
+        </div>
+    </header>
+
+    <main>
+        <div class="main-container">
+            <div class="main-section">
+                <div class="main-details">
+                    <div class="details">
+                      <div class="img-details">
+                        <img src="/Doordash/Assets/img/ScootScoot.svg" alt="">
+                      </div> 
+                      <div class="text-details">
+                        <div class="headingAndtext">
+                            <h2>Become a Dasher</h2>
+                            <h3>As a delivery driver, you'll make reliable
+                                 money—working anytime, anywhere.</h3>
+                        </div>
+                        <button>
+                            <span>Start earning</span>
+                            <img src="/Doordash/Assets/img/orange-search-icon.svg" alt="" width="11px">
+                        </button>
+                      </div> 
+                    </div>
+                    <div class="details">
+                        <div class="img-details">
+                          <img src="/Doordash/Assets/img/Storefront.svg" alt="">
+                        </div> 
+                        <div class="text-details">
+                          <div class="headingAndtext">
+                              <h2>Become a Partner</h2>
+                              <h3>Grow your business and reach new customers 
+                                by partnering with us.</h3>
+                          </div>
+                          <button>
+                              <span>Sign up your store</span>
+                              <img src="/Doordash/Assets/img/orange-search-icon.svg" alt="" width="11px">
+                          </button>
+                        </div> 
+                      </div>
+                      <div class="details">
+                        <div class="img-details">
+                          <img src="/Doordash/Assets/img/iphone.svg" alt="">
+                        </div> 
+                        <div class="text-details">
+                          <div class="headingAndtext">
+                              <h2>Try the App</h2>
+                              <h3>Experience the best your neighborhood has to offer,
+                                 all in one app.</h3>
+                          </div>
+                          <button>
+                              <span>Get the app</span>
+                              <img src="/Doordash/Assets/img/orange-search-icon.svg" alt="" width="11px">
+                          </button>
+                        </div> 
+                      </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
