--- a/Doordash/index1.html
+++ b/Doordash/index1.html
@@ -119,6 +119,208 @@
                 </div>
             </div>
         </div>
+        <div class="food-world">
+            <div class="top-container">
+                <div class="right-section">
+                    <div class="img-right">
+                        <img src="/Doordash/Assets/img/all_in_one.avif" alt="" width="77.5%">
+                    </div>
+                    <div class="img-texts">
+                        <h2>
+                            It’s all here. All in one app.
+                        </h2>
+                        <h3>Discover local, on-demand delivery or Pickup from restaurants, 
+                            nearby grocery and convenience stores, and more.</h3>
+                            <p>Get the app</p>
+                    </div>
+                </div>
+                <div class="right-section">
+                    <div class="img-left">
+                        <img src="/Doordash/Assets/img/ev_fla_wel_alt.avif" alt="" width="77.5%">
+                    </div>
+                    <div class="img-texts">
+                        <h2>
+                           Every Flavor Wekcone
+                        </h2>
+                        <h3>From your neighborhood sushi spot to the burger and fries you crave, 
+                            choose from over 300,000 local and national favorites across the U.S., 
+                            Canada and Australia.</h3>
+                            <a href="#">Find restaurants</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer>
+        <div class="footer-container">
+            <div class="top-footer">
+                <div class="left">
+                    <h2>Top Cities</h2>
+                    <div class="list-one">
+                        <a href="#">
+                            <span>
+                                New York City
+                            </span>
+                        </a>
+                        <a href="#">
+                            <span>
+                                Los Angeles
+                            </span>
+                        </a>
+                        <a href="#">
+                            <span>
+                                Toronto
+                            </span>
+                        </a>
+                        <a href="#">
+                            <span>
+                                Chicago
+                            </span>
+                        </a>
+                        <a href="#">
+                            <span>
+                                Houston
+                            </span>
+                        </a>
+                        <a href="#">
+                            <span>
+                                Brooklyn
+                            </span>
+                        </a>
+                        <a href="#">
+                            <span>
+                                San Diego
+                            </span>
+                        </a>
+                        <a href="#">
+                            <span>
+                                Las Vegas
+                            </span>
+                        </a>
+                    </div>
+                    <div class="list-two">
+                        <a href="#">
+                            <span>San Francisco</span>
+                        </a>
+                        <a href="#">
+                            <span>Seattle</span>
+                        </a>
+                        <a href="#">
+                            <span>Atlanta</span>
+                        </a>
+                        <a href="#">
+                            <span>Queens</span>
+                        </a>
+                        <a href="#">
+                            <span>vancouver,BC</span>
+                        </a>
+                        <a href="#">
+                            <span>Miami</span>
+                        </a>
+                        <a href="#">
+                            <span>San Antonio</span>
+                        </a>
+                        <a href="#">
+                            <span>Phonix</span>
+                        </a>
+                    </div>
+                    <div class="list-last">
+                        <a href="#">
+                            <span>Denver</span>
+                        </a>
+                        <a href="#">
+                            <span>Austin</span>
+                        </a>
+                        <a href="#">
+                            <span>Washington,DC</span>
+                        </a>
+                        <a href="#">
+                            <span>Dallas</span>
+                        </a>
+                        <a href="#">
+                            <span>Melbourne</span>
+                        </a>
+                        <a href="#">
+                            <span>Sydney</span>
+                        </a>
+                        <a href="#">
+                            <span>Montreal</span>
+                        </a>
+                        <a href="#">
+                            <span>All Cities</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="list-first">
+                        <h2>Top Cuisines Near You</h2>
+                        <a href="#">
+                            <span>Pizza Near Me</span>
+                        </a>
+                        <a href="#">
+                            <span>Chinese Food Near Me</span>
+                        </a>
+                        <a href="#">
+                            <span>Sushi Near Me</span>
+                        </a>
+                        <a href="#">
+                            <span>Cafe Near Me</span>
+                        </a>
+                        <a href="#">
+                            <span>Mexican Food Near Me</span>
+                        </a>
+                        <a href="#">
+                            <span>Thai Food Near Me</span>
+                        </a>
+                        <a href="#">
+                            <span>Lunch Near Me</span>
+                        </a>
+                        <a href="#">
+                            <span>Seafood Near Me</span>
+                        </a>
+                    </div>
+                    <div class="list-last">
+                        <a href="#">
+                            <span>Indian Food Near Me</span>
+                        </a>
+                        <a href="#">
+                            <span>Dessert Near Me</span>
+                        </a>
+                        <a href="#">
+                            <span>Burgers Near Me</span>
+                        </a>
+                        <a href="#">
+                            <span>Asian Food Near Me</span>
+                        </a>
+                        <a href="#">
+                            <span>Italian Food Near Me</span>
+                        </a>
+                        <a href="#">
+                            <span>Vegan Food Near Me</span>
+                        </a>
+                        <a href="#">
+                            <span>Sandwiches Near Me</span>
+                        </a>
+                        <a href="#">
+                            <span>Restaurants Near Me</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="mid-footer">
+                <div class="mid-img">
+                    <a href="#">
+                        <img src="/Doordash/Assets/img/app-store.svg" alt="">
+                    
+                    <a href="#">
+                        <img src="/Doordash/Assets/img/google-play.svg" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="bottom-footer">
+                
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
