--- a/Doordash/index1.html
+++ b/Doordash/index1.html
@@ -151,11 +151,13 @@
             </div>
         </div>
     </main>
+
     <footer>
         <div class="footer-container">
             <div class="top-footer">
-                <div class="left">
+                <div class="left grid">
                     <h2>Top Cities</h2>
+                    <div class="city-one">
                     <div class="list-one">
                         <a href="#">
                             <span>
@@ -198,7 +200,7 @@
                             </span>
                         </a>
                     </div>
-                    <div class="list-two">
+                    <div class="list-two grid">
                         <a href="#">
                             <span>San Francisco</span>
                         </a>
@@ -251,8 +253,10 @@
                         </a>
                     </div>
                 </div>
+                </div>
                 <div class="right">
-                    <div class="list-first">
+                    <div class="right-desk">
+                    <div class="list-first grid">
                         <h2>Top Cuisines Near You</h2>
                         <a href="#">
                             <span>Pizza Near Me</span>
@@ -279,7 +283,7 @@
                             <span>Seafood Near Me</span>
                         </a>
                     </div>
-                    <div class="list-last">
+                    <div class="list-last grid">
                         <a href="#">
                             <span>Indian Food Near Me</span>
                         </a>
@@ -307,18 +311,138 @@
                     </div>
                 </div>
             </div>
+            </div>
             <div class="mid-footer">
                 <div class="mid-img">
                     <a href="#">
-                        <img src="/Doordash/Assets/img/app-store.svg" alt="">
+                        <img src="/Doordash/Assets/img/app-store.svg" alt="" width="160px">
                     
                     <a href="#">
-                        <img src="/Doordash/Assets/img/google-play.svg" alt="">
+                        <img src="/Doordash/Assets/img/google-play.svg" alt="" width="160px">
                     </a>
+                </div>
+                <div class="mid-list">
+                    <div class="about">
+                        <h2>Get to Know Us</h2>
+                        <a href="#">
+                            <span>About Us</span>
+                        </a>
+                        <a href="#">
+                            <span>Careers</span>
+                        </a>
+                        <a href="#">
+                            <span>Investors</span>
+                        </a>
+                        <a href="#">
+                            <span>Company Blog</span>
+                        </a>
+                        <a href="#">
+                            <span>Engineering Blog</span>
+                        </a>
+                        <a href="#">
+                            <span>Merchant Blog</span>
+                        </a>
+                        <a href="#">
+                            <span>Gift Cards</span>
+                        </a>
+                        <a href="#">
+                            <span>Promotions</span>
+                        </a>
+                        <a href="#">
+                            <span>Dasher Central</span>
+                        </a>
+
+                        <a href="#">
+                            <span>DoorDash Stories</span>
+                        </a>
+                        <a href="#">
+                            <span>LinkedIn</span>
+                        </a>
+                        <a href="#">
+                            <span>Glassdoor</span>
+                        </a>
+                        <a href="#">
+                            <span>Accessibility</span>
+                        </a>
+                    </div>
+                    <div class="help">
+                        <h2>Let Us Help you</h2>
+                        <a href="#">
+                            <span>Account Details</span>
+                        </a>
+                        <a href="#">
+                            <span>Order History</span>
+                        </a>
+                        <a href="#">
+                            <span>Help</span>
+                        </a>
+                    </div>
+                    <div class="business">
+                        <h2>Doing Business</h2>
+                        <a href="#">
+                            <span>Become a Dasher</span>
+                        </a>
+                        <a href="#">
+                            <span>List Your Business</span>
+                        </a>
+                        <a href="#">
+                            <span>Get Dashers for Deliveries</span>
+                        </a>
+                        <a href="#">
+                            <span>Get DoorDash for Work</span>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="bottom-footer">
-                
+                <div class="social-media">
+                    <a href="#">
+                        <img src="/Doordash/Assets/img/fb.svg" alt="">
+                        <img src="/Doordash/Assets/img/twt.svg" alt="">
+                        <img src="/Doordash/Assets/img/insta.svg" alt="">
+                    </a>
+                </div>
+                <div class="languages">
+                    <div class="language">
+                        <div class="world-img">
+                            <img src="/Doordash/Assets/img/world.svg" alt="">
+                        </div>
+                        <div class="selection">
+                            <select name="lang" id="ln">
+                                <option value="">English (US)</option>
+                                <option value="">English(CA)</option>
+                                <option value="">English(IND)</option>
+                                <option value="">Espano</option>
+                            </select>
+                            <div class="arrow">
+                                <img src="/Doordash/Assets/img/down-angle.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+               <div class="copyright">
+                    <a href="3">
+                        <img src="/Doordash/Assets/img/svgexport-1.svg" alt="" width="31px">
+                    </a>
+                    <a href="#">
+                        <span>Terms of Service</span>
+                    </a>
+                    <a href="#">
+                        <span>Privacy</span>
+                    </a>
+                    <a href="#">
+                        <span>Delivery Locations</span>
+                    </a>
+                    <a href="#">
+                        <span>California Privacy</span>
+                    </a>
+                    <a href="#">
+                        <span>Do Not Sell or Share My Personal Information</span>
+                    </a>
+                    <a href="#">
+                        <span>© 2023 DoorDash</span>
+                    </a>
+               </div>
             </div>
         </div>
     </footer>
