--- a/Doordash/index1.html
+++ b/Doordash/index1.html
@@ -125,20 +125,21 @@
                     <div class="img-right">
                         <img src="/Doordash/Assets/img/all_in_one.avif" alt="" width="77.5%">
                     </div>
-                    <div class="img-texts">
+                    <div class="img-texts text-left">
                         <h2>
                             It’s all here. All in one app.
                         </h2>
                         <h3>Discover local, on-demand delivery or Pickup from restaurants, 
                             nearby grocery and convenience stores, and more.</h3>
                             <p>Get the app</p>
+                        </div>
                     </div>
-                </div>
-                <div class="right-section">
+                    <div class="right-section right-direction">
+                    <div class="foodContainer">
                     <div class="img-left">
                         <img src="/Doordash/Assets/img/ev_fla_wel_alt.avif" alt="" width="77.5%">
                     </div>
-                    <div class="img-texts">
+                    <div class="img-texts text-right">
                         <h2>
                            Every Flavor Wekcone
                         </h2>
@@ -149,6 +150,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </main>
 
