--- a/flipkart/index.html
+++ b/flipkart/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flipkart</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 <div>
@@ -43,13 +44,13 @@
                     <span>Become a Seller</span>
                 </div>
                 <div class="navMore">
-                    <div class="MoreOption">More</div>
-                    <img src="/Assets/img/arrowDown.svg" alt="">
+                    <div class="moreOption">More</div>
+                    <i class="fa-solid fa-angle-down"></i>
                 </div>
                 <div class="navCart">
                     <a href="#">
-                        <img src="/Assets/img/cart.svg" alt="">
-                        <span>Cart</span>
+                        <img src="/Assets/img/cart.svg" alt="" width="16px">
+                        <span class="shopingCart">Cart</span>
                     </a>
                 </div>
             </div>
