--- a/flipkart/index.html
+++ b/flipkart/index.html
@@ -56,6 +56,33 @@
             </div>
         </div>
     </div>
+    <div id="shopList-el" class="shopingList">
+
+    </div>
+    <div class="filter-container">
+        <div class="filterHeading">
+            <span>Filter</span>
+        </div>
+        <div class="filterCategories">
+
+        </div>
+    </div>
+    <div class="mobile-container">
+        <section>
+            <div><span>CATEGORIES</span></div>
+            <div><span>Mobile & Accessories</span></div>
+            <div><span>Mobile</span></div>
+        </section>
+    </div>
+    <div class="priceRange">
+        <div class="price">
+            <span>PRICE</span>
+        </div>
+        <div class="rangingOption">
+            <img src="" alt="">
+            
+        </div>
+    </div>
 </div>
     <script src="/index.js"></script>
 </body>
