--- a/flipkart/index.html
+++ b/flipkart/index.html
@@ -61,10 +61,12 @@
     </div>
     <div class="filter-container">
         <div class="filterHeading">
-            <span>Filter</span>
+            <span class="filText">Filters</span>
+            <!-- <span class="blueText">CLEAR ALL</span> -->
         </div>
         <div class="filterCategories">
-
+            <span>CATEGORIES</span>
+            <span><i class="fa-solid fa-angle-left"></i>Mobile & Accessories</span>
         </div>
     </div>
     <div class="mobile-container">
@@ -80,8 +82,22 @@
         </div>
         <div class="rangingOption">
             <img src="" alt="">
+
+        </div>
+        <div class="min-max">
+            <span>Min</span>
+            <span>to</span>
+            <span>12000+</span>
+        </div>
+    </div>
+    <div class="brandName">
+        <!-- i -->
+        <!-- radio-btn -->
+        <div class="radio-range">
             
         </div>
+        <span>Apple</span>
+        
     </div>
 </div>
     <script src="/index.js"></script>
